--- a/FrmCalculos.xaml
+++ b/FrmCalculos.xaml
@@ -8,7 +8,14 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="FrmCalculos">
 
-    <Grid>
-        
+    <Grid Background="Black">
+        <Label x:Name="LblTitulo" Content="Análisis del Costo-Volumen-Utilidad(CVU)" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="22" FontFamily="Britannic Bold" Foreground="White"/>
+        <Grid Margin="10,59,574,10" Background="#FFA5A5A5">
+            <Button x:Name="BtnNuevoAnalisis" Content="Nuevo Análisis" HorizontalAlignment="Center" Margin="0,22,0,0" VerticalAlignment="Top" Height="49" Width="196" FontFamily="Britannic Bold" FontSize="18" Background="White"/>
+            <Button x:Name="BtnNuevoAnalisis_Copy" Content="Guardados" HorizontalAlignment="Center" Margin="0,160,0,0" VerticalAlignment="Top" Height="49" Width="196" FontFamily="Britannic Bold" FontSize="18" Background="White"/>
+            <Button x:Name="BtnNuevoAnalisis_Copy1" Content="Salir" HorizontalAlignment="Center" Margin="0,308,0,0" VerticalAlignment="Top" Height="49" Width="196" FontFamily="Britannic Bold" FontSize="18" Background="White"/>
+        </Grid>
+        <Image Margin="359,156,139,107" Source="/Image1.png" Stretch="Fill"/>
+
     </Grid>
 </Page>
