--- a/FrmGuardados.xaml
+++ b/FrmGuardados.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Proyecto_Examen.FrmCalculos"
+﻿<Page x:Class="Proyecto_Examen.FrmGuardados"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Proyecto_Examen"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="FrmCalculos">
+      Title="FrmGuardados">
 
     <Grid>
         
