--- a/FrmPresupuestoMaestro.xaml
+++ b/FrmPresupuestoMaestro.xaml
@@ -5,8 +5,64 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Proyecto_Examen"
         mc:Ignorable="d"
-        Title="FrmPresupuestoMaestro" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="Presupuesto Maestro" Height="544" Width="1060">
+    <TabControl>
+        <TabItem x:Name="TbiDatosDelProyecto" HorizontalAlignment="Center" Height="20" Header="datos del Proyecto" VerticalAlignment="Top" Width="103" Margin="0,-1,0,0">
+            <Grid Background="#FFE5E5E5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="11*"/>
+                    <ColumnDefinition Width="1042*"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+            </Grid>
+        </TabItem>
+        <TabItem x:Name="TbiPVentas" Header="PVentas">
+            <Grid Background="#FFE5E5E5">
+                <DataGrid  Margin="10,290,10,10" SelectionChanged="DataGrid_SelectionChanged"/>
+            </Grid>
+        </TabItem>
+        <TabItem x:Name="TbiPProduccion" Header="PProduccion">
+            <Grid Background="#FFE5E5E5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="12*"/>
+                    <ColumnDefinition Width="130*"/>
+                    <ColumnDefinition Width="385*"/>
+                </Grid.ColumnDefinitions>
+            </Grid>
+        </TabItem>
+        <TabItem x:Name="TbiPMaterialesDirectos" HorizontalAlignment="Center" Height="20" Header="PMaterialesDirectos" VerticalAlignment="Top" Width="123" Margin="0,-1,0,0">
+            <Grid Background="#FFE5E5E5"/>
+        </TabItem>
+        <TabItem x:Name="TbiPMod" HorizontalAlignment="Center" Height="20" Header="PMOD" VerticalAlignment="Top" Width="59" Margin="0,-1,0,0">
+            <Grid Background="#FFE5E5E5"/>
+        </TabItem>
+        <TabItem x:Name="TbiPCif" HorizontalAlignment="Center" Height="20" Header="PCIF" VerticalAlignment="Center" Width="54">
+            <Grid Background="#FFE5E5E5"/>
+        </TabItem>
+        <TabItem x:Name="TbiPGastos" HorizontalAlignment="Center" Height="20" Header="PGastos administrativos Y Ventas" VerticalAlignment="Top" Width="181" Margin="0,-1,0,0">
+            <Grid Background="#FFE5E5E5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="8*"/>
+                    <ColumnDefinition Width="191*"/>
+                    <ColumnDefinition Width="328*"/>
+                </Grid.ColumnDefinitions>
+            </Grid>
+        </TabItem>
+        <TabItem x:Name="TbiPEfectivo" HorizontalAlignment="Center" Height="20" Header="PEfectivo" VerticalAlignment="Top" Width="69" Margin="0,-1,0,0">
+            <Grid Background="#FFE5E5E5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="19*"/>
+                    <ColumnDefinition Width="1035*"/>
+                </Grid.ColumnDefinitions>
+            </Grid>
+        </TabItem>
+        <TabItem x:Name="TbiPresupuestoMaestro" HorizontalAlignment="Center" Height="20" Header="PPresupuesto Maestro" VerticalAlignment="Top" Width="152" Margin="0,-1,0,0">
+            <Grid Background="#FFE5E5E5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="25*"/>
+                    <ColumnDefinition Width="1029*"/>
+                </Grid.ColumnDefinitions>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </Window>
