--- a/FrmCvu.xaml
+++ b/FrmCvu.xaml
@@ -1,14 +1,12 @@
-﻿<Page x:Class="Proyecto_Examen.FrmCvu"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Proyecto_Examen"
-      mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
-      Title="FrmCvu">
-
+﻿<Window x:Class="Proyecto_Examen.FrmCVU"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:local="clr-namespace:Proyecto_Examen"
+        mc:Ignorable="d"
+        Title="Análisis Costo-Valor-Utilidad" Height="450" Width="800">
     <Grid>
         
     </Grid>
-</Page>
+</Window>
